ajustement nocookie de liens youtube

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         choisissant des technologies légeres et performantes.
                     </p>
                     
-                    <iframe width="350" height="200" src="https://www.youtube.com/embed/eI-Mizo1VvA?si=TQkSVWFybYpVTimP"
+                    <iframe width="350" height="200" src="https://www.youtube-nocookie.com/embed/eI-Mizo1VvA?si=TQkSVWFybYpVTimP"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
@@ -155,7 +155,7 @@
                         et le back <a href="https://github.com/BrunoJubert/InfosSirene-BACK"
                             aria-label="Voir le dépôt GitHub du back">ici</a> sur mon GitHub.</p>
                     
-                    <iframe width="350" height="200" src="https://www.youtube.com/embed/OhcDuH3Hlhc?si=Y9mylF3OmwKNKLOO"
+                    <iframe width="350" height="200" src="https://www.youtube-nocookie.com/embed/OhcDuH3Hlhc?si=Y9mylF3OmwKNKLOO"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
@@ -172,17 +172,18 @@
                             download="MariusBojanWebsite-Front-main.zip" aria-label="Télécharger le front">ici</a>
                         et le Back <a href="./public/assets/MariusBojanWebsite-Back-main.zip"
                             download="MariusBojanWebsite-Back-main.zip" aria-label="Télécharger le back">ici</a>.</p>
-                    <iframe width="350" height="200" src="https://www.youtube.com/embed/KJR5C5wtFtw?si=gnemHsRpltBcWWuw"
+                    <iframe width="350" height="200" src="https://www.youtube-nocookie.com/embed/KJR5C5wtFtw?si=gnemHsRpltBcWWuw"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen aria-label="vidéo Marius Bojan Trio" loading="lazy">
+                        referrerpolicy="strict-origin-when-cross-origin" 
+                        allowfullscreen aria-label="vidéo Marius Bojan Trio" loading="lazy">
                     </iframe>
                 </div>
 
                 <div id="thanks" class="thanks">
                     <h3>Remerciements</h3>
                     <p>Une vidéo de remerciement pour tous ceux qui m'ont aidé à arriver là où je suis aujourd'hui.</p>
-                    <iframe width="350" height="200" src="https://www.youtube.com/embed/-t2kUcHwqFA?si=LrrKfDXUfPseiR75"
+                    <iframe width="350" height="200" src="https://www.youtube-nocookie.com/embed/-t2kUcHwqFA?si=LrrKfDXUfPseiR75"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
