ajout des cookies, modifications des métas, modifications des mots clefs, ajout helmet

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Portfolio de Bruno Jubert, développeur Web & Web Mobile spécialisé en Angular, React, Node.js et PostgreSQL. Découvrez mes projets et contactez-moi !">
     <meta name="keywords"
-        content="Bruno Jubert, développeur web, web mobile, Angular, React, Node.js, PostgreSQL, portfolio, développeur freelance, projet web">
+        content="Bruno Jubert, développeur web, web mobile, Angular, React, Node.js, PostgreSQL, portfolio, développeur freelance, projet web,développeur paris,développeur meaux,développeur ile de france,développeur seine et marne">
     <meta name="author" content="Bruno Jubert">
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="website">
@@ -15,12 +15,13 @@
     <meta property="og:description" content="Découvrez mon portfolio en ligne : projets, compétences et contact.">
     <meta property="og:image" content="https://brunojubert.github.io/portfolio-ide/public/assets/capture.webp">
     <meta property="og:url" content="https://brunojubert.github.io/portfolio-ide/">
-    <meta property="og:site_name" content="Bruno Jubert - Portfolio">
+    <meta property="og:site_name" content="Bruno Jubert - Développeur Web">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="theme-color" content="#000000">
     <link rel="canonical" href="https://brunojubert.github.io/portfolio-ide/">
     <title>Bruno Jubert - Portfolio</title>
     <link rel="stylesheet" href="./public/styles.min.css">
-    <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous" defer></script>
     <link rel="icon" type="image/png" href="./public/assets/favicon.webp">
     <link rel="icon" type="image/x-icon" href="./public/assets/favicon.ico">
     <meta name="google-site-verification" content="yPLCNrsgUWKiN7y9ZCq-I4p4bIeS5LUQCBSucZEfIFE" />
@@ -238,7 +239,7 @@
             aria-hidden="true"></audio>
         <p>&copy; <span id="current-year"></span> Bruno Jubert - Tous droits réservés</p>
     </footer>
-    <script src="./public/script.js"></script>
+    <script type="module" src="./public/script.min.js" defer></script>
 </body>
 
 </html>
