--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 </li>
                 <li><a href="#contact" aria-label="Me contacter"><i class="fab fa-git-alt" aria-hidden="true"></i>
                         contact.me</a></li>
+                <li>
+                    <a href="#lighthouse" aria-label="lighthouse test"><i class="fa-regular fa-lightbulb"></i>LightHouse</a>
+                </li>
             </ul>
         </nav>
 
@@ -225,6 +228,18 @@
                         <i class="fab fa-facebook" aria-hidden="true"></i> Partager sur Facebook
                     </a>
                 </div>
+            </section>
+
+            <section id="lighthouse">
+                <h2 class="animate-slide-in">Lighthouse</h2>
+                <p>
+                    Vous pouvez voir ici combien ce site est optimisé pour le web. Vous constaterez que la minutie et le soucis du détail 
+                    sont des valeurs que je mets en avant dans mes projets.
+                </p>
+                <div class="gif-container">
+                    <img src="./public/assets/scorelighthouse.gif" alt="Score Lighthouse de 100" />
+                </div>
+
             </section>
         </main>
     </div>
