--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h3 class="animate-slide-in">Bienvenue, je suis Bruno,</h3>
                 <h1 class="animate-slide-in">Développeur</h1>
                 <h1 class="animate-slide-in">Web & Web Mobile</h1>
-                <img src="./public/assets/profil.webp" alt="Bruno Jubert" class="profile-image animate-slide-in"
+                <img src="./public/assets/profile.webp" alt="Bruno Jubert" class="profile-image animate-slide-in"
                     aria-label="Image de profil de Bruno Jubert" width="100" height="100" loading="lazy">
             </div>
 
