rgpd en construction

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="canonical" href="https://brunojubert.github.io/portfolio-ide/">
     <title>Bruno Jubert - Développeur Web</title>
-    <link rel="stylesheet" href="./public/styles.min.css">
+    <link rel="stylesheet" href="./public/styles.css">
     <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous" defer></script>
     <link rel="icon" type="image/png" href="./public/assets/favicon.webp">
     <link rel="icon" type="image/x-icon" href="./public/assets/favicon.ico">
@@ -239,8 +239,15 @@
                 <div class="gif-container">
                     <img src="./public/assets/scorelighthouse.gif" alt="Score Lighthouse de 100" />
                 </div>
-
             </section>
+
+            <!-- <section id="footer-links">
+                <p>
+                    <a href="mailto:bruno.jubert.dev@gmail.com">Contact</a> |
+                    <a href="/rgpd">RGPD</a> |
+                    <a href="/confidentialite">Confidentialité</a>
+                </p>
+            </section> -->
         </main>
     </div>
     <footer class="ide-footer">
