modifications présentations / navigation / skills

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="canonical" href="https://brunojubert.github.io/portfolio-ide/">
     <title>Bruno Jubert - Développeur Web</title>
-    <link rel="stylesheet" href="./public/styles.css">
+    <link rel="stylesheet" href="./public/styles.min.css">
     <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous" defer></script>
     <link rel="icon" type="image/png" href="./public/assets/favicon.webp">
     <link rel="icon" type="image/x-icon" href="./public/assets/favicon.ico">
@@ -31,17 +31,17 @@
     <div class="ide-container">
         <nav class="ide-nav">
             <button class="explorer-menu" aria-label="Menu">
-                <i class="fas fa-chevron-right" aria-hidden="true"></i> PORTFOLIO-NAV
+                <i class="fas fa-chevron-right" aria-hidden="true"></i> NAVIGATION
             </button>
             <ul class="nav-menu">
                 <li><a href="#about" aria-label="À propos de moi"><i class="fas fa-user-circle" aria-hidden="true"></i>
-                        about.me</a></li>
+                        à.propos</a></li>
                 <li><a href="#skills" aria-label="Mes compétences"><i class="fab fa-node-js" aria-hidden="true"></i>
-                        my.skills</a></li>
+                        mes.compétences</a></li>
                 <li>
                     <button class="projects-dropdown" aria-label="Menu déroulant des projets">
                         <i class="fas fa-chevron-right dropdown-icon" aria-hidden="true"></i>
-                        <i class="fa-solid fa-folder-open" aria-hidden="true"></i> projects.web
+                        <i class="fa-solid fa-folder-open" aria-hidden="true"></i> projets.web
                     </button>
                     <ul class="projects-submenu">
                         <li><a href="#greenroots" aria-label="Green Roots">Green Roots</a></li>
@@ -51,7 +51,7 @@
                     </ul>
                 </li>
                 <li><a href="#contact" aria-label="Me contacter"><i class="fab fa-git-alt" aria-hidden="true"></i>
-                        contact.me</a></li>
+                        contactez.moi</a></li>
                 <li>
                     <a href="#lighthouse" aria-label="lighthouse test"><i class="fa-regular fa-lightbulb"></i>LightHouse</a>
                 </li>
@@ -69,20 +69,16 @@
 
             <section id="about">
                 <h2>Bruno Jubert</h2>
-                <p>À 41 ans, j'ai eu le temps de grandir dans un monde où la technologie a évolué à une vitesse folle.
-                </p>
-                <p>D'un ordinateur à un autre, d'une console à une autre (et on pourrait continuer toute la journée), la
-                    chance de
-                    grandir dans ce monde en constante évolution m'a permis de comprendre que je devais vite m'adapter à
-                    la technologie. Car la technologie ne s'adaptera pas à nous, à moins que nous puissions la
-                    comprendre et la
-                    maîtriser pour la rendre justement plus "adaptée" et "adaptative".</p>
-                <p>L'opportunité de me former chez O'Clock m'a permis d'en apprendre davantage sur le monde du
-                    développement,
-                    de comprendre que la technologie est un outil qui peut nous aider à résoudre des problèmes, à créer
-                    des
-                    solutions et à rendre le monde meilleur.</p>
+                <p>J’ai grandi avec la technologie, toujours en train de m’adapter et de comprendre comment ça marche. Ce qui m’a
+                    toujours intéressé, c’est de savoir comment l’utiliser pour en tirer le meilleur.</p>
+                <p>Autodidacte, je suis le genre de personne qui aime creuser les sujets, comprendre le pourquoi du comment et
+                    optimiser ce qui peut l’être. Pour moi, l’efficacité, c’est la clé : du code clair, un site rapide, et des
+                    solutions simples mais efficaces.</p>
+                <p>Ma formation chez O’Clock m’a permis de structurer tout ça, d’approfondir mes connaissances en développement web
+                    et de me lancer dans des projets concrets. Aujourd’hui, j’apprends encore, j’expérimente, et je cherche toujours
+                    des solutions qui font sens.</p>
             </section>
+
 
             <section id="skills">
                 <h2 class="animate-slide-in">Compétences</h2>
@@ -96,13 +92,11 @@
                     </p>
                     <ul>
                         <li><i class="fab fa-html5" aria-hidden="true"></i>HTML5</li>
-                        <li><i class="fa-brands fa-css3" aria-hidden="true"></i> CSS3</li>
                         <li><i class="fa-brands fa-sass" aria-hidden="true"></i> Sass</li>
                         <li><i class="fab fa-js" aria-hidden="true"></i> JavaScript</li>
                         <li><i class="fa-solid fa-database" aria-hidden="true"></i> PostgreSQL</li>
                         <li><i class="fa-brands fa-angular" aria-hidden="true"></i> Angular</li>
                         <li><i class="fa-brands fa-node" aria-hidden="true"></i>NodeJs</li>
-                        <li><i class="fa-brands fa-react" aria-hidden="true"></i> React</li>
                     </ul>
                 </div>
 
