ajustement marge nav + marges

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Portfolio de Bruno Jubert, développeur Web & Web Mobile spécialisé en Angular, React, Node.js et PostgreSQL. Découvrez mes projets et contactez-moi !">
+        content="Portfolio de Bruno Jubert, développeur Web & Web Mobile spécialisé en Angular, Node.js et PostgreSQL. Découvrez mes projets et contactez-moi !">
     <meta name="keywords"
         content="Bruno Jubert, développeur web, web mobile, Angular, React, Node.js, JavaScript, PostgreSQL, portfolio, application web, développeur freelance, projet web,développeur paris,développeur meaux,développeur ile de france,développeur seine et marne">
     <meta name="author" content="Bruno Jubert">
@@ -35,13 +35,14 @@
             </button>
             <ul class="nav-menu">
                 <li><a href="#about" aria-label="À propos de moi"><i class="fas fa-user-circle" aria-hidden="true"></i>
-                        à.propos</a></li>
+                    A propos</a></li>
                 <li><a href="#skills" aria-label="Mes compétences"><i class="fab fa-node-js" aria-hidden="true"></i>
-                        mes.compétences</a></li>
+                    Compétences</a></li>
                 <li>
                     <button class="projects-dropdown" aria-label="Menu déroulant des projets">
                         <i class="fas fa-chevron-right dropdown-icon" aria-hidden="true"></i>
-                        <i class="fa-solid fa-folder-open" aria-hidden="true"></i> projets.web
+                        <i class="fa-solid fa-folder-open" aria-hidden="true">
+                        </i>Projets
                     </button>
                     <ul class="projects-submenu">
                         <li><a href="#greenroots" aria-label="Green Roots">Green Roots</a></li>
@@ -51,7 +52,7 @@
                     </ul>
                 </li>
                 <li><a href="#contact" aria-label="Me contacter"><i class="fab fa-git-alt" aria-hidden="true"></i>
-                        contactez.moi</a></li>
+                        Contact</a></li>
                 <li>
                     <a href="#lighthouse" aria-label="lighthouse test"><i class="fa-regular fa-lightbulb"></i>LightHouse</a>
                 </li>
@@ -109,10 +110,8 @@
                     </p>
                     <ul>
                         <li><i class="fa-solid fa-brain" aria-hidden="true"></i> Empathique</li>
-                        <li><i class="fa-solid fa-handshake-simple" aria-hidden="true"></i> Esprit d'équipe</li>
-                        <li><i class="fa-regular fa-calendar-check" aria-hidden="true"></i> Organisé</li>
-                        <li><i class="fa-solid fa-cube" aria-hidden="true"></i> Résoudre des problèmes</li>
-                        <li><i class="fa-solid fa-bolt-lightning" aria-hidden="true"></i> Anticiper</li>
+                        <li><i class="fa-solid fa-cube" aria-hidden="true"></i> Analytique</li>
+                        <li><i class="fa-solid fa-magnifying-glass"></i> Curieux</li>
                         <li><i class="fa-solid fa-brush" aria-hidden="true"></i> Créatif</li>
                     </ul>
                 </div>
@@ -257,5 +256,4 @@
     </footer>
     <script type="module" src="./public/script.min.js" defer></script>
 </body>
-
 </html>
