ajustement taille bouton social share

--- a/index.html
+++ b/index.html
@@ -144,12 +144,15 @@
 
                 <div id="sirene" class="sirene">
                     <h3>Infos Sirene</h3>
-                    <p>Un projet que j'ai commencé pendant mon stage de fin de formation. Plusieurs missions, entre
-                        design, intégration, API et les éléments habituels. Mais aussi l'apprentissage du fabuleux
+                    <p>Un projet d'applications web que j'ai commencé pendant mon stage de fin de formation
+                        chez BGS Associés. Le but était de créer une application permettant de récupérer des informations sur des entrprises
+                        en France à partir de leur numéro SIREN, SIRET, ou encore le nom du dirigeant ainsi que leur adresse.
+                        Plusieurs missions, entre
+                        design, intégration et API, mais aussi la découverte et l'apprentissage du 
                         framework Angular.</p>
-                    <p>Vous pouvez voir le front <a href="https://github.com/BrunoJubert/InfosSirene-FRONT"
+                    <p>Vous pouvez voir le code du front <a href="https://github.com/BrunoJubert/InfosSirene-FRONT"
                             aria-label="Voir le dépôt GitHub du front">ici</a>
-                        et le back <a href="https://github.com/BrunoJubert/InfosSirene-BACK"
+                        et du back <a href="https://github.com/BrunoJubert/InfosSirene-BACK"
                             aria-label="Voir le dépôt GitHub du back">ici</a> sur mon GitHub.</p>
                     
                     <iframe width="350" height="200" src="https://www.youtube-nocookie.com/embed/OhcDuH3Hlhc?si=Y9mylF3OmwKNKLOO"
@@ -165,9 +168,9 @@
                     <p>Un de mes projets les plus aboutis du moment. Ce site vitrine pour musicien est spécial, il
                         permet à l'administrateur du site de gérer lui-même les contenus du site.</p>
                     <p>Un projet donc qui me touche tout particulièrement car je viens moi-même du monde de la musique.
-                        Télécharger le Front <a href="./public/assets/MariusBojanWebsite-Front-main.zip"
+                        Vous pouvez télécharger le code du Front <a href="./public/assets/MariusBojanWebsite-Front-main.zip"
                             download="MariusBojanWebsite-Front-main.zip" aria-label="Télécharger le front">ici</a>
-                        et le Back <a href="./public/assets/MariusBojanWebsite-Back-main.zip"
+                        et du Back <a href="./public/assets/MariusBojanWebsite-Back-main.zip"
                             download="MariusBojanWebsite-Back-main.zip" aria-label="Télécharger le back">ici</a>.</p>
                     <iframe width="350" height="200" src="https://www.youtube-nocookie.com/embed/KJR5C5wtFtw?si=gnemHsRpltBcWWuw"
                         title="YouTube video player" frameborder="0"
@@ -191,9 +194,9 @@
 
             <section id="contact">
                 <h2 class="animate-slide-in">Contact</h2>
-                <p>Le meilleur moyen de faire connaissance malgré la distance, c'est d'aller fouiller (et si c'est dans
-                    les poubelles de votre voisin, bin il faut pas..) <i
-                        class="fa-regular fa-face-grin-beam-sweat fa-beat" aria-hidden="true"></i></p>
+                <p>Le meilleur moyen de faire connaissance malgré la distance, c'est d'aller fouiller .
+                    Et vous pouvez aussi partager ce site sur LinkedIn ou Facebook pour me donner un coup de pouce.
+                </p>
                 <ul>
                     <li>
                         <i class="fas fa-envelope" aria-hidden="true"></i>
@@ -214,11 +217,11 @@
                 <div class="social-share">
                     <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://brunojubert.github.io/portfolio-ide/"
                         target="_blank" class="share-btn linkedin" aria-label="Partager sur LinkedIn">
-                        <i class="fab fa-linkedin" aria-hidden="true"></i> Partager sur LinkedIn
+                        <i class="fab fa-linkedin" aria-hidden="true"></i> Partager ce site sur LinkedIn
                     </a>
                     <a href="https://www.facebook.com/sharer/sharer.php?u=https://brunojubert.github.io/portfolio-ide/"
                         target="_blank" class="share-btn facebook" aria-label="Partager sur Facebook">
-                        <i class="fab fa-facebook" aria-hidden="true"></i> Partager sur Facebook
+                        <i class="fab fa-facebook" aria-hidden="true"></i> Partager ce site sur Facebook
                     </a>
                 </div>
             </section>
