contact link modifié sur le theme light

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="canonical" href="https://brunojubert.github.io/portfolio-ide/">
     <title>Bruno Jubert - Développeur Web</title>
-    <link rel="stylesheet" href="./public/styles.min.css">
+    <link rel="stylesheet" href="./public/styles.css">
     <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous" defer></script>
     <link rel="icon" type="image/png" href="./public/assets/favicon.webp">
     <link rel="icon" type="image/x-icon" href="./public/assets/favicon.ico">
@@ -63,7 +63,7 @@
             <div class="header-section">
                 <h3 class="animate-slide-in">Bienvenue, je suis Bruno,</h3>
                 <h1 class="animate-slide-in">Développeur</h1>
-                <h1 class="animate-slide-in">Web & Web Mobile</h1>
+                <h1 class="animate-slide-in">FullStack ANGULAR</h1>
                 <img src="./public/assets/profile.webp" alt="Bruno Jubert" class="profile-image animate-slide-in"
                     aria-label="Image de profil de Bruno Jubert" width="100" height="100" loading="lazy">
             </div>
@@ -264,6 +264,6 @@
             </label>
         </div>
     </footer>
-    <script type="module" src="./public/script.min.js" defer></script>
+    <script type="module" src="./public/script.js" defer></script>
 </body>
 </html>
