--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="canonical" href="https://brunojubert.github.io/portfolio-ide/">
     <title>Bruno Jubert - Développeur Web</title>
-    <link rel="stylesheet" href="./public/styles.css">
+    <link rel="stylesheet" href="./public/styles.min.css">
     <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous" defer></script>
     <link rel="icon" type="image/png" href="./public/assets/favicon.webp">
     <link rel="icon" type="image/x-icon" href="./public/assets/favicon.ico">
@@ -264,6 +264,6 @@
             </label>
         </div>
     </footer>
-    <script type="module" src="./public/script.js" defer></script>
+    <script type="module" src="./public/script.min.js" defer></script>
 </body>
 </html>
